[package]
name = "kvm-ioctls"
version = "0.23.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Safe wrappers over KVM ioctls"
repository = "https://github.com/rust-vmm/kvm"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0 OR MIT"
edition.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2.39"
kvm-bindings = { path = "../kvm-bindings", version = "0.13.0", features = ["fam-wrappers"] }
vmm-sys-util = { workspace = true }
bitflags = "2.4.1"

[dev-dependencies]
byteorder = "1.2.1"
